# embassy-dshot

./: .gitignore  CHANGELOG.md  Cargo.toml  DSHOT_FRAME_ANALYSIS.md  DSHOT_FRAME_INTEGRATION.md  FEATURES_COMPARISON.md  IMPROVEMENT_PLAN.md  README.md
examples/: Cargo.toml  async_quadcopter.rs  build.rs
examples/.cargo/: config.toml
examples/src/: bdshot_test.rs  bringup.rs  esc_command_test.rs  single_esc.rs  twin_engine.rs
examples/tests/: on_target_tests.rs
src/: dshot_embassy_rp.rs  dshot_rp2040_hal.rs  lib.rs  rp.rs  telemetry.rs  traits.rs  types.rs
src/dshot_embassy_rp/: bidirectional.rs  mod.rs
src/rp/: bidirectional.rs  unidirectional.rs
