[package]
name = "embassy-dshot"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Ragarnoy <tiagolernould@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Async DShot ESC protocol driver for embassy-rp (RP2040/RP2350)"
repository = "https://github.com/Ragarnoy/embassy-dshot"
keywords = ["embassy", "dshot", "esc", "rp2040", "rp2350"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["rp2040"]
targets = ["thumbv6m-none-eabi"]

[features]
default = []
std = []
defmt = ["dep:defmt"]
rp2040 = ["dep:embassy-rp", "dep:embassy-time", "embassy-rp/rp2040"]
rp2350 = ["dep:embassy-rp", "dep:embassy-time", "embassy-rp/rp235xa"]

[dependencies]
dshot-frame = "0.2.1"
embassy-rp = { version = "0.9.0", optional = true, default-features = false }
embassy-time = { version = "0.5.0", optional = true }
defmt = { version = "1.0", optional = true }
fixed = "1.29"
